--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "dependencies": {
     "async-validator": "^1.10.1",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "nodemon": "^1.18.10"
+    "knex": "^0.16.3",
+    "nodemon": "^1.18.10",
+    "npm": "^6.9.0",
+    "pg": "^7.8.2"
   }
 }
