--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/dharadangariya/Library-Management-System#readme",
   "dependencies": {
     "async-validator": "^1.10.1",
+    "async-validator-2": "^1.0.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
